--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
-* {
-    padding: 0;
+*,
+*::after,
+*::before {
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
+
 
 :root {
     --violet: hsl(257, 40%, 49%);
@@ -134,7 +137,7 @@
     body {
         width: 100%;
         height: 100vh;
-        padding: 30px;
+        padding: 35px;
 
         background-image: url(./images/bg-mobile.svg);
         background-size: 100%;
@@ -142,12 +145,12 @@
     }
 
     header img {
-        width: 100px;
+        width: 130px;
         margin-bottom: 50px;
     }
 
     .imagen img {
-        width: 85%;
+        width: 100%;
     }
 
     main {
@@ -159,6 +162,9 @@
 
     .texto {
         width: 100%;
+        padding: 0;
+        margin-top: 55px;
+
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -166,26 +172,27 @@
 
     .texto h2 {
         font-family: 'Poppins', sans-serif;
-        font-size: 20px;
+        font-size: 24px;
         font-weight: 600;
         text-align: center;
     }
 
     .texto p {
         font-family: 'Open Sans', sans-serif;
-        font-size: 17.5px;
+        font-size: 16px;
         font-weight: 400;
+        text-align: center;
         margin: 15px 0;
         line-height: 25px;
     }
 
     .texto a {
         display: inline-block;
-        padding: 15px 65px;
+        padding: 10px 85px;
         margin-top: 10px;
 
         font-family: 'Poppins', sans-serif;
-        font-size: 18px;
+        font-size: 14px;
         font-weight: 400;
         text-decoration: none;
         color: var(--violet);
@@ -205,12 +212,12 @@
 
     footer {
         width: 100%;
-        height: 45px;
+        height: 170px;
 
         display: flex;
         flex-direction: row;
-        justify-content: right;
-        align-items: flex-start;
+        justify-content: center;
+        align-items: center;
     }
 
     .redes {
